# 3dPhysicsEngine

./: .gitignore  AABB.cpp  AABB.h  CMakeLists.txt  Object.cpp  Object.h  README.md  bodyInstance.cpp  bodyInstance.h  camera.h  collisionGeometry.h  glad.c  hardwareInfo.cpp  hardwareInfo.h  macros.h  main.cpp  mesh.cpp  mesh.h  modelInit.cpp  modelInit.h  object.cpp  object.h  physicsComponent.h  physicsDefinition.h  renderInit.cpp  renderInit.h  shader.cpp  shader.h  topology.cpp  topology.h  world.cpp  world.h
data/: ManyMovements.txt  ManyPoints.txt  ManyRots.txt  initialLocations.txt  initialMovements.txt  initialRotations.txt
include/glad/: glad.h
models/: boundingWall.xyz  cube.xyz  tetrahedron.xyz
shaders/: boundingWall.fs  boundingWall.vs  lightcasters.fs  lightcasters.vs  lighting.fs  lighting.vs  simple.fs  simple.vs  tetrahedron.fs
uml/: uml.mdj
